# Files

./: .gitignore  CMakeLists.txt
include/: Server.h  mainWindow.h  server.ui
src/: Server.cpp  main.cpp  mainWindow.cpp
